# fastAPI_test

./: .gitignore  backend_pre_start.py  init_db.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 89b38e270954_create_table.py
src/: app.py
src/db/: init_db.py  session.py
src/domain/: subject.py  teacher.py  teacher_subject.py
src/models/: __init__.py  subject.py  teacher.py  teacher_subject.py
src/repository_layer/: __init__.py  base.py  subject_repository.py  subject_teacher_repository.py  teacher_repository.py
src/router/: index_router.py  teacher_router.py
